# openeo_flood

./: .gitignore  README.html  README.md  aoi.gpkg  aoi.gpkg-shm  aoi.gpkg-wal  pyproject.toml
flexth_code/: config.example.yaml
preprocessed/: dtm.tif.aux.xml  flood.tif.aux.xml
xarray_pipelines/: fabdem.py  get_dtm.py  get_gfm_image.py
