[project]
name = "openeo-flood"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "dask>=2026.3.0",
    "fsspec>=2026.4.0",
    "numpy>=2.4.6",
    "odc-stac>=0.5.2",
    "openeo>=0.50.0",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "rioxarray>=0.21.0",
    "stackstac>=0.5.1",
    "vecraspy",
    "flexth",
    "xarray>=2025.1.1",
    "geemap>=0.38.2",
]

[tool.uv.sources]
vecraspy = { git = "https://github.com/kwundram2602/vecraspy.git" }
flexth = { git = "https://github.com/kwundram2602/FLEXTH" }
# Change GDAL source if neccessary, e.g. for Windows users, use the following wheel:
gdal = { url = "https://github.com/cgohlke/geospatial-wheels/releases/download/v2026.2.26/gdal-3.12.2-cp313-cp313-win_amd64.whl" }
